# llm-lsp-index

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  SPEC.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
npm-package/: README.md  package.json
npm-package/scripts/: install.js
plan/: read.md
src/: config.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/static/: index.html
src/bridge/: handlers.rs  mod.rs  snippet.rs
src/lsp/: client.rs  download.rs  java_virtual_uri.rs  mod.rs  process.rs  registry.rs  types.rs  watcher.rs
src/mcp/: http_server.rs  mod.rs  protocol.rs  server.rs  tools.rs
src/search/: hybrid.rs  mod.rs  searcher.rs
src/utils/: file.rs  mod.rs  uri.rs
tasks/: plan.md  todo.md
tests/: java_lsp_test.rs  mcp_integration_test.rs
tests/fixtures/go-sample/: go.mod  main.go
tests/fixtures/java-sample/: pom.xml
tests/fixtures/java-sample/src/main/java/com/example/: Calculator.java  Greeter.java  Main.java
tests/fixtures/java-sample/src/test/java/com/example/: CalculatorTest.java
tests/fixtures/rust-sample/: Cargo.toml
tests/fixtures/rust-sample/src/: lib.rs  main.rs
