[package]
name = "lsp-index"
version = "0.1.0"
edition = "2021"
description = "LSP-to-MCP Bridge - Headless LSP Client exposing IDE capabilities to AI via MCP"
authors = ["lsp-index"]
license = "MIT"

[lib]
name = "lsp_index"
path = "src/lib.rs"

[[bin]]
name = "lsp-index"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# LSP types
lsp-types = "0.95"

# File watching
notify = "6"

# Error handling
thiserror = "1"
anyhow = "1"

# URI handling
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP (rmcp or manual implementation)
# rmcp = "0.1"  # Will add when available/stable

[dev-dependencies]
# Testing
tokio-test = "0.4"