[package]
name = "lsp-index-gui"
version = "0.1.0"
description = "LSP Index GUI - Desktop application for LSP-to-MCP Bridge"
authors = ["lsp-index"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lsp-index-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"

# LSP client dependencies
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

# Local library
lsp-index = { path = ".." }
